tests/ast_interpreter/err_continue_outside_loop.expected
<string>:4:9: error: continue outside a loop
        continue;
        ^^^^^^^^^
