tests/ast_interpreter/err_continue_outside_loop.nx
fun main() {
    var x = 10;
    if (x > 5) {
        continue;
    }
}